KNN + Decision Tree

--- a/ML_Battle.ipynb
+++ b/ML_Battle.ipynb
@@ -737,6 +737,40 @@
     "cf_matrix = confusion_matrix(y_test,y_pre)\n",
     "sns.heatmap(cf_matrix, annot=True,fmt='', cmap='Blues')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import export_graphviz\n",
+    "import graphviz "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7789855072463768"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_tree = DecisionTreeClassifier(random_state=1)\n",
+    "d_tree.fit(X_train,y_train)\n",
+    "y_tree_predict = d_tree.predict(X_test)\n",
+    "accuracy_score(y_test,y_tree_predict)\n"
+   ]
   }
  ],
  "metadata": {
